swen430as1/tests/valid/real/Real_Valid_17.while
real sum(real[] items) {
    real sum = 0.0;
    for(int i = 0;i!=|items|;i=i+1) {
	sum = sum + items[i];
    }
    return sum;
}

void main() {
    assert sum([]) == 0;
    assert sum([1]) == 1.0;
    assert sum([2,3.73]) == 5.73;
    assert sum([3,4,5]) == 12.0;
}
