swen430as1/tests/invalid/dowhile/DoWhile_Invalid_6.while
int f(int[] items) {
  int i = 0;
  int r;
  do {
      int j = i + 1;
      r = j;
      i = r;
  } while(j < |items|);

  return r;
}

void main() {
    assert f([1]) == 1;
    assert f([1,2,3]) == 3;
    assert f([-1]) == 1;
}
